modified some tags with their semantic counterpart and encapsulated the component in the main tag

--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <article class="card">
-    <img class="card__image" src="./assets/images/image-qr-code.png" alt="image of a qr code in white with a blue background">
 
-    <div class="card__body">
-      <h2 class="card__body__title">
-        Improve your front-end skills by building projects
-      </h2>
-      <p class="card__body__text">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.
-      </p>
-    </div>
-  </article>
-  
-  <div class="attribution">
+  <main>
+    <article class="card">
+      <img class="card__image" src="./assets/images/image-qr-code.png" alt="A qr code in white placed in the center, behind a blue background">
+
+      <div class="card__body">
+        <h1 class="card__body__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="card__body__text">
+          Scan the QR code to visit Frontend Mentor and take your coding  skills to the next level.
+        </p>
+      </div>
+    </article>
+  </main>
+
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/arnovolts">arno volts</a>.
-  </div>
+  </footer>
 </body>
 </html>
