Update credits link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/arnovolts">arno volts</a>.
+    Coded by <a href="https://github.com/vv01tz">arno volts</a>.
   </footer>
 </body>
 </html>
